<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <item
        android:id="@+id/nav_home"
        android:title="@string/home"
        android:icon="@drawable/home_icon"/>

    <item
        android:title="@string/profile">

        <menu>
            <item
                android:id="@+id/nav_login"
                android:title="@string/login"
                android:icon="@drawable/login_icon_vector"/>
            <item
                android:id="@+id/nav_logout"
                android:title="@string/logout"
                android:icon="@drawable/logout_icone"/>



        </menu>

    </item>

    <item
        android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:title="@string/share"
                android:icon="@drawable/share_icon"/>
            <item
                android:id="@+id/nav_rateUs"
                android:title="@string/rate_us"
                android:icon="@drawable/rate_us_icon"/>
        </menu>
    </item>

</menu>