<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="6dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp4"
        app:cardCornerRadius="@dimen/dp8"
        app:cardElevation="@dimen/dp4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dp4">

            <TextView
                android:id="@+id/amountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/limit"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

            <TextView
                android:id="@+id/categoryTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp1"
                android:text="@string/category"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

            <TextView
                android:id="@+id/spentTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp1"
                android:text="@string/spent"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

            <TextView
                android:id="@+id/remainingTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp1"
                android:text="@string/remaining"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

            <TextView
                android:id="@+id/startDateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp1"
                android:text="@string/date"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />



        </LinearLayout>
        <!-- Delete button -->
        <ImageButton
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/dp10"
            android:layout_marginTop="@dimen/dp10"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="Delete Budget"
            android:src="@drawable/delete_icone24" />

        <ImageButton
            android:id="@+id/updateButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginEnd="@dimen/dp10"
            android:visibility="gone"
            android:layout_marginTop="@dimen/dp40"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="Delete Budget"
            android:src="@drawable/update_icone" />
        <ImageButton
            android:id="@+id/add_Buttonex"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:visibility="gone"
            android:layout_marginEnd="@dimen/dp4"
            android:layout_marginTop="@dimen/dp40"
            android:src="@drawable/baseline_add_24" />

    </androidx.cardview.widget.CardView>
1
</androidx.constraintlayout.widget.ConstraintLayout>
