<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    tools:context=".screens.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_bg"
            app:titleTextColor="@color/white"
            app:subtitle="@string/login"
            app:subtitleTextColor="@color/white"
            android:theme="@style/Theme.AppCompat.DayNight"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/login_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp142"
            android:layout_marginTop="@dimen/dp10"
            android:layout_marginBottom="@dimen/dp10"
            android:src="@drawable/login_pic"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/signInText"/>

        <TextView
            android:id="@+id/signInText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_to_continue"
            app:layout_constraintTop_toBottomOf="@id/login_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textinput1"
            app:layout_constraintTop_toBottomOf="@id/signInText"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp64"
            android:layout_margin="@dimen/dp6"
            android:autofillHints="emailAddress"
            android:hint="@string/name"
            android:inputType="textEmailAddress"
            android:padding="@dimen/dp12"
            android:textColor="#000000"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textinput2"
            app:layout_constraintTop_toBottomOf="@id/textinput1">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edittext"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp64"
            android:layout_margin="@dimen/dp6"
            android:autofillHints="emailAddress"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/dp12"
            android:textColor="#000000"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textinput3"
            app:layout_constraintTop_toBottomOf="@id/textinput2">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edittext"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp64"
            android:layout_margin="@dimen/dp6"
            android:autofillHints="password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/dp12"
            android:textColor="#000000"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgot_password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp12"
            android:text="@string/forgot_password"
            android:textColor="#EF0808"
            android:layout_marginTop="@dimen/dp10"
            app:layout_constraintTop_toBottomOf="@id/textinput3"
            app:layout_constraintRight_toRightOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp56"
            android:textSize="20sp"
            android:layout_margin="4dp"
            android:text="@string/login"
            app:cornerRadius="@dimen/dp10"
            android:textColor="@color/black"
            android:backgroundTint="@color/primaryColor"
            app:layout_constraintTop_toBottomOf="@id/forgot_password_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/register_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp12"
            android:layout_marginEnd="@dimen/dp60"
            android:backgroundTint="#161617"
            android:text="@string/doesnt_have_acccount"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/login_button"

            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/signUp_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp12"
            android:layout_marginStart="@dimen/dp5"
            android:text="@string/sign_up"
            android:textColor="#F41818"
            android:textSize="@dimen/sp14"
            android:textStyle="italic"
            app:layout_constraintTop_toBottomOf="@id/login_button"
            app:layout_constraintLeft_toRightOf="@id/register_text"/>


        <View
            android:id="@+id/last_line_left"
            android:layout_width="@dimen/dp100"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/dp20"
            android:layout_marginStart="@dimen/dp30"
            android:background="#092A62"
            app:layout_constraintTop_toBottomOf="@id/register_text"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/or_login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp10"
            android:text="@string/or_login_with"
            android:textSize="@dimen/sp16"
            app:layout_constraintTop_toBottomOf="@id/register_text"
            app:layout_constraintLeft_toRightOf="@id/last_line_left"
            app:layout_constraintRight_toLeftOf="@id/view_line_right"/>

        <View
            android:id="@+id/view_line_right"
            android:layout_width="@dimen/dp100"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/dp20"
            android:layout_marginEnd="@dimen/dp30"
            android:background="#092A62"
            app:layout_constraintTop_toBottomOf="@id/register_text"
            app:layout_constraintRight_toRightOf="parent"/>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/googleBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp14"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/or_login_text"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
