<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".screens.RegisterActivity">

        <!-- Toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_bg"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:title="Register"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Registration Image -->
        <ImageView
            android:id="@+id/image_register"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp142"
            android:contentDescription="@string/register"
            android:src="@drawable/register_pic"
            android:layout_marginTop="@dimen/dp10"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbarRegister" />

        <!-- Input Fields and Register Button -->
        <LinearLayout
            android:id="@+id/linearLayoutRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dp1"
            android:layout_margin="@dimen/dp2"
            app:layout_constraintTop_toBottomOf="@id/image_register"
            tools:context=".RegisterActivity">

            <!-- Email Field -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input1">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp64"
                    android:hint="@string/email"
                    android:autofillHints="emailAddress"
                    android:inputType="textEmailAddress"
                    android:layout_margin="@dimen/dp5"
                    android:padding="@dimen/dp10" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Password Field -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input2">
                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp64"
                    android:hint="@string/password"
                    android:autofillHints="password"
                    android:layout_margin="@dimen/dp5"
                    android:padding="@dimen/dp10"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Confirm Password Field -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input3">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/rePasswordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp64"
                    android:hint="@string/confirm_password"
                    android:autofillHints="password"
                    android:layout_margin="@dimen/dp5"
                    android:padding="@dimen/dp10"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Register Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp56"
                android:layout_margin="@dimen/dp5"
                app:cornerRadius="@dimen/dp10"
                android:text="@string/register"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:backgroundTint="@color/primaryColor" />
        </LinearLayout>

        <!-- Login TextView -->
        <TextView
            android:id="@+id/loginHere"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:focusable="true"
            android:text="@string/already_have_an_account_login_here"
            android:textColor="@color/primaryColor"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/dp10"
            android:clickable="true"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="@dimen/dp10"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayoutRegister" />
        <ProgressBar
            android:id="@+id/progressBarR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
